--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://bootstrapbuildspace.sfo2.cdn.digitaloceanspaces.com//gIYUvFGaMeFj/JIYhzketvgIa/bootstrap.min.css">
     <title>Hamilton Rice</title>
 </head>
 <body>
-    
+    Hamilton Rice
 </body>
 </html>
