--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://bootstrapbuildspace.sfo2.cdn.digitaloceanspaces.com//gIYUvFGaMeFj/JIYhzketvgIa/bootstrap.min.css">
     <title>Hamilton Rice</title>
 </head>
-<body>
+<body data-bs-theme="dark">
     Hamilton Rice
 </body>
 <script src="res/js/bootstrap.min.js"></script>
