--- a/index.html
+++ b/index.html
@@ -9,8 +9,65 @@
     <title>Hamilton Rice</title>
 </head>
 <body data-bs-theme="dark">
-    <div class="container my-3">
-        <h1 class="code"># Hamilton Rice</h1>
+    <div class="container my-3 px-4">
+        <h1>Hamilton Rice</h1>
+        
+        <div class="d-flex">
+            <code class="mx-2"><a class="nav-link text-muted" target="_blank" href="https://www.linkedin.com/in/hamilton-rice"><i class="fa-brands fa-linkedin"></i> Linkedin</a></code>
+            <code class="mx-2 text-muted">|</code>
+            <code class="mx-2"><a class="nav-link text-muted" target="_blank" href="https://www.github.com/hrice9"><i class="fa-brands fa-github"></i> GitHub</a></code>
+            <code class="mx-2 text-muted">|</code>
+            <code class="mx-2"><a class="nav-link text-muted" href="mailto:h.rice404@gmail.com"><i class="fa-solid fa-envelope"></i> Email</a></code>
+        </div>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <h4><code><a class="nav-link active" aria-current="page" href="#">About</a></code></h4>
+                        </li>
+                        <li class="nav-item">
+                            <h4><code><a class="nav-link" href="#">Projects</a></code></h4>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="col-lg-7">
+            <h2 class="my-3 pt-3" id="about">About Me</h2>
+
+            <p>Passionate software developer looking for work. Currently living in Charlotte North Carolina.</p>
+            <p>I got my start in software development making Minecraft mods in Java. Ever since then I have been fascinated with software development and, in particular, 3D graphics. I moved on to making games with Unity and GameMaker Studio 2. </p>
+            <p>In college, I have built web and mobile applications with python, ASP.NET, .NET MAUI, and Android native. I am motivated by my desire to seek new challenges that push me as a developer and a person.</p>
+
+            <h2 class="my-3 pt-3" id="education">Education</h2>
+            <h4>University of North Carolina at Charlotte</h4>
+            <p>B.S. Computer science | Aug 2018 - May 2023</p>
+
+            <h2 class="my-3 pt-3">Leadership</h2>
+            <h4>Charlotte Outdoor Gaming</h4>
+            <p>President | Dec 2021 - May 2023</p>
+            <ul>
+                <li>
+                    <p>Worked closely with University of North Carolina at Charlotte campus staff and public safety to run events involving Nerf blasters safely on campus.</p>
+                </li>
+                <li>
+                    <p>Lead the initiaitve to rebuild the organization after the pandemic.</p>
+                </li>
+                <li>
+                    <p>Over 20% growth in playerbase after 1 year</p>
+                </li>
+                <li>
+                    <p>Lead the organization's internal computer science department, responsible for developing software to help run events and engage players.</p>
+                </li>
+            </ul>
+        </div>
+        
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
